prevent status bar overlapping

--- a/js/src/views/Application/application.css
+++ b/js/src/views/Application/application.css
@@ -23,5 +23,5 @@
 }
 
 .container {
-  padding-bottom: 1em;
+  padding-bottom: 1.6em;
 }
